istio-auth0/k8s/02-istio/auth.yaml
---
# mesh wide config: enfore mTLS for all communications
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  namespace: istio-system
  name: default
spec:
  mtls:
    mode: STRICT
