istio-auth0/k8s/02-istio/ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress
  labels:
    name: ingress
    istio-injection: disabled
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: ingress
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtualservice
  namespace: ingress
spec:
  hosts:
  - "*"
  gateways:
  - gateway
  http:
  - name: oauth2-proxy-sign-out-public
    match:
    - uri:
        prefix: /oauth2/sign_out
    headers:
      request:
        set:
          x-auth-request-redirect: "https://dev-27550695.okta.com/login/signout?fromURI=http://istio-okta.local"
    route:
    - destination:
        host: oauth2-proxy.sso.svc.cluster.local
        port:
          number: 80
  - name: oauth2-proxy-public
    match:
    - uri:
        prefix: /oauth2/callback
    - uri:
        prefix: /oauth2/sign_in
    - uri:
        prefix: /oauth2/start
    route:
    - destination:
        host: oauth2-proxy.sso.svc.cluster.local
        port:
          number: 80
  - name: httpbin-protected
    match:
    - uri:
        prefix: /httpbin/
    route:
    - destination:
        host: httpbin.httpbin.svc.cluster.local
        port:
          number: 80
  - name: home-public
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: home.home.svc.cluster.local
        port:
          number: 80
